--- a/research/problems/cant_be_late/low_availability_tight_deadline_large_overhead/readme
+++ b/research/problems/cant_be_late/low_availability_tight_deadline_large_overhead/readme
@@ -139,7 +139,7 @@ Evaluation Details
 - Tested on 720 real Spot instance traces
 - Task duration: 48 hours
 - Deadline: 52 hours (4-hour slack)
-- Restart overhead: 0.2 hours
+- Restart overhead: 0.20 hours (12 minutes)
 - Price of on-demand is 3.06$/hr
 - Price of Spot is 0.9701$/hr
 - 0 = Cost of full on-demand
