--- a/research/problems/cant_be_late_multi/low_availability_loose_deadline_large_overhead/readme
+++ b/research/problems/cant_be_late_multi/low_availability_loose_deadline_large_overhead/readme
@@ -164,12 +164,12 @@ Evaluation Details
 
 
 - Task duration: 24 hours
-- Deadline: 52 hours (28-hour slack)
-- Restart overhead: 0.2 hours
+- Deadline: 48 hours (24-hour slack)
+- Restart overhead: 0.20 hours (12 minutes)
 - Price of on-demand is 3.06$/hr
 - Price of Spot is 0.9701$/hr
 
-Your program has a total time limit of 300 seconds. You may be evaluated for up to 52 × 60 × 60 = 187200 time steps. Please ensure that your code is efficient under python.
+Your program has a total time limit of 300 seconds. You may be evaluated for up to 48 × 60 × 60 = 172800 time steps. Please ensure that your code is efficient under python.
 
 Implementation Notes
 ---------------------
