docs: clarify availability levels in readme files
- high_availability: 43-78% availability regions
- low_availability: 4-40% availability regions
- mixed_availability: both high and low availability regions
- Fix task duration for low/mixed loose_deadline (48h not 24h)

--- a/research/problems/cant_be_late/high_availability_loose_deadline_large_overhead/readme
+++ b/research/problems/cant_be_late/high_availability_loose_deadline_large_overhead/readme
@@ -145,7 +145,7 @@ Evaluation Details
 - 0 = Cost of full on-demand
 - 100 = Cost of optimal spot strategy
   
-- Notice your solution will be tested on real traces with high Spot availability.
+- Notice your solution will be tested on real traces with high Spot availability (43-78% availability regions).
 
 Your program has a total time limit of 300 seconds. You may be evaluated for up to 70 × 60 × 60 = 252000 time steps. Please ensure that your code is efficient under python.
 
