--- a/research/problems/cant_be_late/low_availability_loose_deadline_small_overhead/readme
+++ b/research/problems/cant_be_late/low_availability_loose_deadline_small_overhead/readme
@@ -137,13 +137,12 @@ Notice that if you fail to finish the task before the deadline, you will receive
 Evaluation Details
 ------------------
 - Tested on 720 real Spot instance traces
-- Task duration: 24 hours
+- Task duration: 48 hours
 - Deadline: 70 hours (22-hour slack)
 - Restart overhead: 0.05 hours (3 minutes)
 - Price of on-demand is 3.06$/hr
-- Price of Spot is 0.9701$/hr
-- 0 = Cost of full on-demand
-- 100 = Cost of optimal spot strategy
+- Price of Spot is 0.9180$/hr
+- Notice your solution will be tested on real traces with low Spot availability (4-40% availability regions).
 
 Your program has a total time limit of 300 seconds. You may be evaluated for up to 70 × 60 × 60 = 252000 time steps. Please ensure that your code is efficient under python.
 
