--- a/research/problems/cant_be_late_multi/low_availability_loose_deadline_large_overhead/readme
+++ b/research/problems/cant_be_late_multi/low_availability_loose_deadline_large_overhead/readme
@@ -169,6 +169,8 @@ Evaluation Details
 - Price of on-demand is 3.06$/hr
 - Price of Spot is 0.9701$/hr
 
+- Notice your solution will be tested on real traces with low Spot availability.
+
 Your program has a total time limit of 300 seconds. You may be evaluated for up to 48 × 60 × 60 = 172800 time steps. Please ensure that your code is efficient under python.
 
 Implementation Notes
